# resume-studio

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  start-backend.bat
.github/workflows/: bench.yml
bench/: __init__.py  cli.py  config.yaml  harness.py  iterate.py  judge.py  metrics.py  scenarios.py  tasks.py  term.py
config/doc_types/: lesson_plan.yaml  resume.yaml
docs/: context-engineering-wechat.md  index.md  layout_design_main_flow.md  sdgp_idea_notes.md  ui-style-guide-v2.md
docs/development/: architecture.md  setup.md
docs/features/: ai-tailor.md  dashboard.md  mock-interview.md  resume-builder.md  settings.md
evaluation/: README.md
examples/: README.md  example-resume.json
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  api.ts  index.css  llm-settings.ts  main.tsx  preferences.ts  types.ts
scripts/: add_jds.py  extend_jds.py  seed_jds.py
src/: config.py  errors.py  main.py
templates/: resume-single-column.template.html  resume-two-column.template.html  swiss-single.json  template-manifest.json
tests/: README.md  conftest.py  test_agent_loop.py  test_intent_resolver.py  test_interview.py  test_jd_tools.py  test_latex_render.py  test_llm_settings.py  test_resources_import_recent.py  test_self_check.py  test_sse_scenarios.py  test_turn_runner.py  test_v3_routes.py
(+210 files in other folders)
